# django_rest_project

./: pyproject.toml
quickstart/: admin.py  models.py
quickstart/migrations/: 0001_initial.py
tutorial/: settings.py
